# air-quality-forecast

./: .gitignore  pyproject.toml
config/: config.yaml
notebooks/: 01_exploratory_data_analysis.ipynb  02_gap_filling_sources.ipynb
src/: pipeline.py  run_pipeline.py
src/cleaning/: base_cleaning.py  eea_cleaning.py  missing_data.py  transforms.py
src/features/: base.py  lag_features.py  log_transform.py  pipeline.py  rolling_features.py  time_features.py
src/ingestion/: base_ingestion.py  eea_ingestion.py  openaq_ingestion.py
src/schemas/: cleaning.py
tests/cleaning/: test_eea_cleaning.py  test_missing_data.py  test_transforms.py
tests/features/: test_builders.py  test_pipeline.py
tests/schemas/: test_cleaning.py
