[project]
name = "air-quality-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openaq>=0.7.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "requests>=2.33.1",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "pytest>=8.0.0",
    "seaborn>=0.13.2",
]


