[project]
name = "air-quality-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openaq>=0.7.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
]


